--- a/public/css/terms.css
+++ b/public/css/terms.css
@@ -43,7 +43,7 @@ section {
 
 /* Footer */
 footer {
-    background-color: #333;
+    background-color:black;
     color: white;
     padding: 10px 0;
     text-align: center;
