--- a/views/about.ejs
+++ b/views/about.ejs
@@ -10,6 +10,14 @@
 
 <header>
     <h1>À Propos de Nous</h1>
+
+    <nav>
+        <ul>
+            <li><a href="/about">À propos</a></li>
+            <li><a href="/contact">Contact</a></li>
+            <li><a href="/terms">Conditions d'utilisation</a></li>
+        </ul>
+    </nav>
 </header>
 
 <main>
@@ -34,14 +42,7 @@
 </main>
 
 <footer>
-    <div class="footer-content">
         <p>&copy; 2024 Réservez votre Maison. Tous droits réservés.</p>
-        <ul class="footer-links">
-            <li><a href="/about">À propos</a></li>
-            <li><a href="/contact">Contact</a></li>
-            <li><a href="/terms">Conditions d'utilisation</a></li>
-        </ul>
-    </div>
 </footer>
 
 </body>
