--- a/views/accueil.ejs
+++ b/views/accueil.ejs
@@ -16,6 +16,14 @@
     <h1>Bienvenue sur la Plateforme de Réservation de Maisons</h1>
     <!-- Affichage du texte d'introduction passé du serveur avec la variable introText -->
     <p><%= introText %></p>
+
+    <nav>
+        <ul>
+            <li><a href="/about">À propos</a></li>
+            <li><a href="/contact">Contact</a></li>
+            <li><a href="/terms">Conditions d'utilisation</a>
+        </ul>
+    </nav>
 </header>
 
 <main>
@@ -29,26 +37,10 @@
             </div>
         </div>     
     </section>
-     <!-- Section d'informations supplémentaires pour le contact -->
-    <section class="infos">
-        <!-- Informations de contact, incluant le numéro de téléphone et les horaires d'ouverture -->
-        <h3>Information</h3>
-        <p><strong>Téléphone:</strong>89 67 45 23 01</p>
-        <p><strong>Horaires:</strong> Lundi - Vendredi: 07h - 20h et Samedi: 07h - 16h</p>
-    </section>
 
 <footer>
-    <!-- Pied de page avec des informations sur les droits d'auteur et des liens de navigation -->
-    <div class="footer-content">
         <!-- Copyright et mention des droits réservés -->
         <p>&copy; 2024 Réservez votre Maison. Tous droits réservés.</p>
-        <!-- Liste des liens de navigation pour d'autres pages du site -->
-        <ul class="footer-links">
-            <li><a href="/about">À propos</a></li>
-            <li><a href="/contact">Contact</a></li>
-            <li><a href="/terms">Conditions d'utilisation</a></li>
-        </ul>
-    </div>
 </footer>
 
 </body>
